# web-benchmark

./: .gitmodules  README.md
.github/workflows/: go.yml  rust.yml
cpp-crow-sqlite/: CMakeLists.txt  README.md  main.cpp
cpp-crow-sqlite/templates/: index.html
cpp-drogon-sqlite/: CMakeLists.txt  Film.h  IndexHtml.cc  IndexHtml.h  README.md  main.cpp
cpp-drogon-sqlite/templates/: IndexHtml.csp
go-fiber-mustache-postgres/: .gitignore  README.md  go.mod  go.sum  main.go
go-fiber-mustache-postgres/templates/: index.mustache
go-fiber-sqlite/: .gitignore  README.md  go.mod  go.sum  main.go
go-fiber-sqlite/templates/: index.html
go-gin-sqlite/: .gitignore  README.md  go.mod  go.sum  main.go
go-gin-sqlite/templates/: index.html
go-gin-templ-postgres/: .gitignore  README.md  go.mod  go.sum  index.templ  main.go
node-fastify-handlebars-sqlite/: README.md  app.js  package-lock.json  package.json
node-sveltekit-sqlite/: README.md  package-lock.json  package.json  svelte.config.js
node-sveltekit-sqlite/src/: app.d.ts  app.html
node-sveltekit-sqlite/src/lib/: db.ts
node-sveltekit-sqlite/src/routes/: +page.server.ts  +page.svelte
python-uvicorn-fastapi-sqlite/: README.md  serve.py
python-uvicorn-fastapi-sqlite/templates/: index.html
rust-axum-askama-rusqlite/: Cargo.toml  README.md
rust-axum-askama-rusqlite/src/: main.rs
rust-axum-askama-rusqlite/templates/: index.html
rust-axum-askama-sqlx/: Cargo.toml  README.md
rust-axum-askama-sqlx/src/: main.rs
