[package]
name = "axum-askama-rusqlite-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.12"
rusqlite = "0.29.0"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.0", features = ["compression-gzip", "map-response-body", "util"] }
